<resources>
    <string name="app_name">Elite Mart</string>
    <string name="email_address">Email Address (Required)</string>
    <string name="password_required">Password (Required)</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Elite Mart</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="clothings">Clothings</string>
    <string name="beauty">Beauty</string>
    <string name="food">Food</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_account">Create your account</string>
    <string name="title_activity_electronics">Electronics</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="devicename">Name</string>
    <string name="copyright">copyright © 2020; MIU-Elites</string>

    <!--    checkout-->
    <string name="cart_detail">CART DETAIL</string>
    <string name="clear_all">Clear All</string>
    <string name="complete_order">COMPLETE ORDER</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="cash">$25</string>
    <string name="addProdct">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_product">ProductActivity</string>

    <string name="back_to_home">BACK</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string-array name="food_images">
        <item>@drawable/food</item>
        <item>@drawable/food1</item>
        <item>@drawable/food2</item>
        <item>@drawable/food3</item>
        <item>@drawable/food4</item>
        <item>@drawable/food5</item>
        <item>@drawable/food6</item>
        <item>@drawable/food7</item>
        <item>@drawable/food8</item>
        <item>@drawable/food9</item>
        <item>@drawable/food10</item>
        <item>@drawable/food11</item>
        <item>@drawable/food12</item>
        <item>@drawable/food13</item>
        <item>@drawable/food14</item>
        <item>@drawable/food15</item>
        <item>@drawable/food16</item>
        <item>@drawable/food17</item>
        <item>@drawable/food18</item>
        <item>@drawable/food19</item>
    </string-array>
    <string-array name="elec_images">
        <item>@drawable/electronics</item>
        <item>@drawable/electronics1</item>
        <item>@drawable/electronics3</item>
        <item>@drawable/electronics4</item>
        <item>@drawable/electronics5</item>
        <item>@drawable/electronics6</item>
        <item>@drawable/electronics8</item>
        <item>@drawable/electronics10</item>
        <item>@drawable/electronics11</item>
        <item>@drawable/electronics12</item>
        <item>@drawable/electronics13</item>
        <item>@drawable/electronics15</item>
        <item>@drawable/electronics16</item>
        <item>@drawable/electronics17</item>
        <item>@drawable/electronics18</item>
        <item>@drawable/electronics19</item>
    </string-array>

    <string-array name="clothings">
        <item>@drawable/clothing</item>
        <item>@drawable/clothing1</item>
        <item>@drawable/clothing2</item>
        <item>@drawable/clothing3</item>
        <item>@drawable/clothing4</item>
        <item>@drawable/clothing5</item>
        <item>@drawable/clothing6</item>
        <item>@drawable/clothing7</item>
        <item>@drawable/clothing8</item>
        <item>@drawable/clothing9</item>
        <item>@drawable/clothing10</item>
        <item>@drawable/clothing11</item>
        <item>@drawable/clothing12</item>
        <item>@drawable/clothing13</item>
    </string-array>

    <string-array name="beauty_images">
        <item>@drawable/beauty</item>
        <item>@drawable/beauty1</item>
        <item>@drawable/beauty2</item>
        <item>@drawable/beauty3</item>
        <item>@drawable/beauty4</item>
        <item>@drawable/beauty5</item>
        <item>@drawable/beauty6</item>
        <item>@drawable/beauty7</item>
        <item>@drawable/beauty8</item>
        <item>@drawable/beauty9</item>
        <item>@drawable/beauty11</item>
        <item>@drawable/beauty12</item>
        <item>@drawable/beauty13</item>
        <item>@drawable/beauty14</item>
    </string-array>


</resources>