<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FullscreenActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/walmart_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:text="@string/sign_in_to_your_account"
            android:textColor="#636363"
            android:textSize="30sp" />



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/email_address"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/password_required"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:layout_marginBottom="20dp"
                    android:autoLink="all"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="right"
                    android:onClick="forgotPassword"
                    android:text="@string/forgot_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#535353" />


                <Button
                    android:id="@+id/button"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:onClick="authentication"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:backgroundTint="#1D7AD6"
                    app:rippleColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="35dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/darker_gray" />

                    <Space
                        android:layout_width="10sp"
                        android:layout_height="1dp"
                        android:layout_weight="10" />


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Don't have an account?"
                        android:textColor="#8C8C8C"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="1dp"
                        android:layout_weight="10" />

                    <View
                        android:layout_width="35dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="10"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <Button
                    android:id="@+id/outlinedButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:text="@string/create_a_new_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#1D7AD6"
                    android:textSize="20sp"
                    android:onClick="createAccount"
                    app:backgroundTint="#FFFFFF" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/copyright" />

    </LinearLayout>


</FrameLayout>